============================================================================
STLSoft -  Changes

; Created:  29th March 2002
; Updated:  4th May 2016

============================================================================


    ************************************
    * Change key:                      *
    *                                  *
    *  ~  means something has changed  *
    *  +  means a new addition         *
    *  -  means removal of something   *
    *  *  means a general bullet-point *
    *                                  *
    ************************************


4th May 2016 - 1.10.1 alpha 22 (delta)
======================================

Summary:
--------

 * added winstl/system/module_functions.h


Details:
--------

WinSTL:

 + winstl/system/module_functions.h:
    + added winstl/system/module_functions.h



4th May 2016 - 1.10.1 alpha 21 (delta)
======================================

Summary:
--------

 * Clang compatibility


Details:
--------

STLSoft:

 ~ stlsoft/container/insert_ordered_map.hpp:
 ~ stlsoft/container/insert_ordered_set.hpp:
 ~ stlsoft/limits/integral_limits.h:
 ~ stlsoft/memory/util/allocator_features.hpp:
 ~ stlsoft/string/string_slice.hpp:
 ~ stlsoft/traits/integral_printf_format_traits.hpp:
    ~ Clang compatibility



4th May 2016 - 1.10.1 alpha 20 (delta)
======================================

Summary:
--------

 * Clang compatibility
 * instances of _DEBUG now changed to STLSOFT_DEBUG


Details:
--------

STLSoft:

 ~ stlsoft/container/insert_ordered_map.hpp:
 ~ stlsoft/container/insert_ordered_set.hpp:
 ~ stlsoft/conversion/conversion_flags.hpp:
 ~ stlsoft/limits/integral_limits.h:
 ~ stlsoft/memory/util/allocator_features.hpp:
 ~ stlsoft/string/string_slice.hpp:
 ~ stlsoft/traits/integral_printf_format_traits.hpp:
    ~ Clang compatibility

 ~ stlsoft/string/simple_string.hpp:
 ~ stlsoft/string/static_string.hpp:
 ~ stlsoft/test/util/files/std/ximpl/base_FILE.hpp: