@@ -7,6 +7,12 @@ STLSoft -  History
 ============================================================================
 
 
+4th May 2016 - 1.10.1 alpha 23 (delta)
+--------------------------------------
+
+ (see CHANGES.txt)
+
+
 4th May 2016 - 1.10.1 alpha 22 (delta)
 --------------------------------------
 
